SERVER-80475 Stop audit_synchronize_job from running during FCV transition on mongos

GitOrigin-RevId: d7aa020f977842b503b8fb21f4cd9dfe46e1d4e5